--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textStyle="bold"
-            android:textSize="30sp"
-            android:textColor="@color/secondary"
-            android:fontFamily="@font/dancing"
+            style="@style/Title"
             android:text="@string/horoscope"/>
     </FrameLayout>
 
