--- a/app/src/main/res/layout/activity_horoscope_detail.xml
+++ b/app/src/main/res/layout/activity_horoscope_detail.xml
@@ -6,57 +6,60 @@
     android:layout_height="match_parent"
     android:background="@color/primary"
     tools:context=".ui.detail.HoroscopeDetailActivity">
-    
+
     <ImageView
         android:id="@+id/ivDetail"
         android:layout_width="0dp"
         android:layout_height="300dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:background="@color/red"/>
-    
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:background="@color/red" />
+
     <ImageView
-        android:src="@drawable/ic_back"
         android:id="@+id/ivBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="24dp"
+        android:src="@drawable/ic_back"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:tint="@color/gold" />
+
 
     <TextView
         android:id="@+id/tvTitle"
+        style="@style/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/dancing"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivDetail"
-        app:layout_constraintEnd_toEndOf="parent"
-        style="@style/Title"
-        tools:text="test"
-        android:fontFamily="@font/dancing"/>
+        tools:text="test" />
 
     <TextView
         android:id="@+id/tvBody"
+        style="@style/Body"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="text overview"
-        style="@style/Body"
-        android:gravity="center"
         android:layout_margin="24dp"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        tools:text="text overview" />
 
     <ProgressBar
+        android:id="@+id/pb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminateTint="@color/gold"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
